style: better user stories fix: user stories description style: better rapports

--- a/pld-generator/hard-coded-pages/rapports/2022-07-05.md
+++ b/pld-generator/hard-coded-pages/rapports/2022-07-05.md
@@ -1,4 +1,4 @@
-### Rapport d’avancement – KickOff – 05/07/2022
+### **Rapport d’avancement – KickOff – 05/07/2022**
 
 **Robin** a commencé à prendre en main lexical, la bibliothèque d’édition, après avoir comparé les différentes alternatives. 
 
