--- a/pld-generator/hard-coded-pages/rapports/2022-09-12.md
+++ b/pld-generator/hard-coded-pages/rapports/2022-09-12.md
@@ -1,4 +1,4 @@
-### Rapport d’avancement – Follow up – 12/09/2022
+### **Rapport d’avancement – Follow up – 12/09/2022**
 
 **Balthazar** à travailler sur l’application mobile. Il a élaborer des wireframe et a commencé une partie de la maquette pour la V1 de l’application. Il a également travailler sur le développement du visuel des écrans de l’application tel que la page de connexion, la page de listing des différents dossiers, la page de listing des différentes notes ainsi que la page de visualisation d’une note. Il a également lier le visuel et la connexion avec le backend pour la page de connexion.
 
